fix: endpoint and body fixes for negotiations and transfers !300
